--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,22 @@ GOOGLE_API_KEY=your_google_api_key_here
 AZURE_OPENAI_API_KEY=your_azure_openai_api_key_here
 AZURE_OPENAI_MODEL_DEPLOYMENT=gpt-4o-ms
 SILICONFLOW_API_KEY=your_siliconflow_api_key_here
+VOLCENGINE_API_KEY=your_volcengine_api_key_here
+# Reddit API 配置
+REDDIT_CLIENT_ID=your_client_id
+REDDIT_CLIENT_SECRET=your_client_secret
+REDDIT_USER_AGENT=soccer-trends-app v1.0
+
+# LLM 配置
+LLM_PROVIDER=openai
+
+# 应用配置
+SECRET_KEY=your_secret_key
+FLASK_DEBUG=True
+FLASK_HOST=0.0.0.0
+FLASK_PORT=5000
+
+# 定时任务配置
+SCHEDULER_INTERVAL_MINUTES=60
+POST_LIMIT=5
+COMMENT_LIMIT=20
