--- a/requirements.txt
+++ b/requirements.txt
@@ -20,3 +20,10 @@ google-generativeai
 
 # gRPC, for Google Generative AI preventing WARNING: All log messages before absl::InitializeLog() is called are written to STDERR
 grpcio==1.70.0
+
+# Reddit Soccer App
+flask>=2.3.3
+praw>=7.7.1
+apscheduler>=3.10.4
+markdown>=3.5.1
+flask-wtf>=1.2.1
